# content-pilot

./: .gitignore  AGENTS.md  LICENSE  README.md  SOUL.md  SYSTEM_RULES.md  contentpilot.spec  cookies.txt  pyproject.toml  requirements.txt  run-desktop.sh
.github/workflows/: build-desktop.yml  build.yml
analytics-addon/: README.md
analytics-addon/docs/: GA4_SETTINGS_GUIDE.md  (+1 more)
blog/: __init__.py
cli/: attach_images.py  backup-gdrive.sh  blog-kill.sh  blog-start.sh  check_duplicate.py  pipeline.py  retarget.sh  setup.sh  setup_wizard.py  status.py  telegram_notify.py  trending_topics.py
config/: .env.example  mcporter.json  topical-map.md
data/: content-calendar.md  licenses.json
docs/: API_DOCUMENTATION.md  BLOG_STRATEGY.md  CHANGELOG.md  CONCEPT-INTERNAL.md  CONTENT_CALENDAR.md  DEPLOY.md  FAQ.md  IMPLEMENTATION-PLAN.md  INSTALLATION.md  PERFORMANCE_METRICS.md  PRODUCT-HUNT-LAUNCH.md  QUALITY_STANDARDS.md  QUICK_START.md  SETUP_GUIDE.md  TEAM_SOPS.md  TELEGRAM_SETUP.md  TROUBLESHOOTING.md  USER_MANUAL.md  setup-credentials.md  test-scenarios.md
landing/: index.html
promotion-addon/: README.md
scripts/: attach_images.py  check-readiness.sh  check_duplicate.py  setup_wizard.py  status.py  telegram_notify.py  topic_ideas.py
standalone/: README.md  pyproject.toml  requirements.txt  start.sh
standalone/blog/: __init__.py  license.py  pipeline.py
standalone/blog/infrastructure/: __init__.py  job_workspace.py  notifier.py  throttle.py
standalone/blog/interface/: presenter.py
standalone/config/: config.template.yaml  config.yaml
standalone/scripts/: activate.py  check_duplicate.py  generate_souls.py  pipeline.py  setup.py  status.py  topic_ideas.py
standalone/web/: app.py
standalone/web/templates/: activate.html  articles.html  connect_blogger.html  settings.html  trending.html
templates/: DRAFT_TEMPLATE.md  RESEARCH_BRIEF_TEMPLATE.md  article-listicle.md  article-news.md  article-tutorial.md  voice-template.md
tests/: e2e_test.py  fakes.py  test_client.py  test_gates.py  test_html.py  test_idea_bank.py  test_images.py  test_infra_new.py  test_link_validator.py  test_pipeline.py  test_stages.py
web/: app.py  desktop.py
workspace/: .license  config.template.yaml  config.yaml  idea-bank.md  voice.md
(+114 files in other folders)
