[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contentpilot"
version = "0.1.0"
description = "AI-powered blog automation pipeline — from idea to published post in minutes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "BagasUnix", email = "aldinopratama15@gmail.com"}
]
keywords = ["blog", "automation", "ai", "seo", "blogger", "content"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
    "flask>=3.0",
]

[project.optional-dependencies]
desktop = [
    "pywebview>=5.0",
]
dev = [
    "pytest>=7.0",
]
blogger = [
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
]
all = [
    "contentpilot[desktop,blogger,dev]",
]

[project.scripts]
contentpilot = "contentpilot.interface.cli:main"
contentpilot-desktop = "web.desktop:main"

[project.urls]
Homepage = "https://github.com/bagasunix/content-pilot"
Repository = "https://github.com/bagasunix/content-pilot"
Issues = "https://github.com/bagasunix/content-pilot/issues"

[tool.setuptools.packages.find]
where = ["src"]
