[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "blog-lifecycle-pro"
version = "1.0.0"
description = "Blog automation pipeline — standalone version"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
blog-lifecycle = "blog.pipeline:main"

[tool.setuptools.packages.find]
include = ["blog*"]
